--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "violet"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -13,3 +13,4 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 warp = "0.3"
 lazy_static = "1.4.0"
+ansi_term = "0.12.1"
