--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "violet"
-version = "1.2.2"
+version = "1.2.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,3 +14,4 @@ tracing-subscriber = "0.3"
 warp = "0.3"
 lazy_static = "1.4.0"
 ansi_term = "0.12.1"
+neofiglet = "0.1.1"
