--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "violet"
-version = "1.2.4"
+version = "1.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.140", features = ["derive"]}
+serde = { version = "1", features = ["derive"] }
 serde_json = "*"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
@@ -15,3 +15,4 @@ warp = "0.3"
 lazy_static = "1.4.0"
 ansi_term = "0.12.1"
 neofiglet = "0.1.1"
+serde_yaml = "0.9.9"
