--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "violet"
-version = "1.3.0"
+version = "1.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,3 +16,4 @@ lazy_static = "1.4.0"
 ansi_term = "0.12.1"
 neofiglet = "0.1.1"
 serde_yaml = "0.9.9"
+base64 = "0.13.0"
